assets/css/styles.css
/* Variables */
:root {
  --background: hsl(0, 0%, 14%);
  --background-alt: hsla(0, 0%, 20%, 0.5);
  --background-alt-dark: hsla(0, 0%, 10%, 0.75);
  --border: hsl(0, 0%, 50%);
  --border-accent: hsl(200, 100%, 50%);
  --border-radius: 5px;
  --text: hsl(0, 0%, 80%);
  --link: hsl(196, 77%, 35%);
  --link-visited: hsl(196, 77%, 35%);
  --link-active: hsl(196, 77%, 50%);
  --header-link: hsl(0, 0%, 71%);
  --header-link-active: hsl(0, 0%, 80%);
  --button-background: hsl(0, 0%, 5%);
  --button-text: hsl(0, 0%, 75%);
  --button-border: hsl(0, 0%, 50%);
  --button-background-active: hsl(0, 0%, 7%);
  --button-border-active: hsl(0, 0%, 50%);
  --form-focus: hsl(0, 0%, 20%);
}

@font-face {
  font-family: "Inter";
  src: url('/fonts/Inter-Regular.woff2') format('woff2'),
    url('/fonts/Inter-Regular.woff') format('woff');
  font-style: normal;
  font-weight: 400;
  font-display: swap
}


@font-face {
  font-family: "Inter";
  src: url('/fonts/Inter-Bold.woff2') format('woff2'),
    url('/fonts/Inter-Bold.woff') format('woff');
  font-style: normal;
  font-weight: 600;
  font-display: swap
}

/* Reset */
* {
  box-sizing: border-box
}

/* Common Elements */
a {
  color: var(--link);
}

a:visited {
  color: var(--link-visited);
}

a:hover {
  color: var(--link-active);
}

svg {
  display: block;
}

details {
  padding: 0.25em 0.5em;
}

details > summary {
  cursor: pointer;
}

/* Top-level elements */
body {
  border-top: 3px solid var(--border-accent);
  background: var(--background);
  color: var(--text);
  display: flex;
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', sans-serif;
  font-size: 16px;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

header,
main,
footer {
  gap: 1.5em;
  margin: 0 auto;
}

.container {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 1.5em;
}

header {
  padding: 1em 0;
}

header .header-top .header-left {
  align-items: center;
  display: flex;
  gap: 0.25em;
}

header a,
header a:visited {
  color: var(--header-link);
  text-decoration: none;
}

header a:hover {
  color: var(--text);
}

header h1 {
  font-size: 100%;
  font-weight: bold;
  margin: 0;
  padding: 0.5em 0;
}

header h1 a:first-child {
  color: var(--border-accent);
}

header .search {
  border-radius: var(--border-radius);
  border-color: var(--border);
  border-width: 1px;
  font-size: inherit;
  width: 100%;
}

header nav {
  overflow-x: scroll;
}

header nav ul {
  display: flex;
  gap: 1em;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

header nav li {
  display: block;
  padding: 0.5em 0;
}

header nav li:hover {
  cursor: pointer;
}

header nav a:hover {
  color: var(--header-link-active);
}

main {
  line-height: 1.5em;
  line-break: normal;
}

footer {
  display: flex;
  gap: 3em;
  justify-content: center;
  padding: 1em 0;
}

/* Responsive Design Breakpoints */

/* Breakpoint: Larger Mobile */
@media screen and (min-width: 425px) {
  header .header-top {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  header .header-right {
    display: flex;
    justify-content: flex-end;
  }

  header .header-left div:nth-child(2) {
    align-self: flex-end;
  }

  header .search {
    width: auto;
  }
}

/* Forms / Input / etc */
input,
button,
textarea {
  background-color: var(--background-alt);
  border: 1px solid var(--button-border);
  border-radius: var(--border-radius);
  font-size: inherit;
  padding: 0.2em 0.5em;
}

button,
input[type=submit] {
  color: var(--button-text);
  background-color: var(--button-background);
  border: 1px solid var(--button-border);
}

button:hover,
input[type=submit]:hover {
  transform: translateY(-0.5px);
  background-color: var(--button-background-active);
  border: 1px solid var(--button-border-active);
}

button,
input[type=submit] {
  cursor: pointer;
}

.button-group {
  display: flex;
  gap: 1em;
}

form {
  display: flex;
  gap: 0.5em;
  cursor: pointer;
}

input,
textarea {
  color: var(--text);
}

input[type=text]:focus,
textarea:focus {
  background-color: var(--form-focus);
}

textarea {
  max-width: 100%;
}

label {
  display: flex;
  gap: 0.5em;
  cursor: pointer;
  max-width: 100%;
}

/* Tables */
table {
  border: 1px solid var(--border);
  border-collapse: separate;
  border-radius: var(--border-radius);
  border-spacing: 0;
  width: 100%;
}

tr:nth-child(even) {
  background-color: var(--background-alt);
}

td {
  padding: 0.25em 0.5em;
}

thead td {
  border-bottom: 1px solid var(--border);
}

thead td {
  background-color: var(--background-alt);
  font-weight: bold;
}

thead td:first-child {
  border-radius: var(--border-radius) 0 0 0;
}

thead td:last-child {
  border-radius: 0 var(--border-radius) 0 0;
}

tbody tr:last-child td:first-child {
  border-radius: 0 0 0 var(--border-radius);
}
tbody tr:last-child td:last-child {
  border-radius: 0 0 var(--border-radius) 0;
}



/* Component: Section */
.section {
  border: 1px solid var(--border);
  border-radius: var(--border-radius);
  display: flex;
  flex-direction: column;
}

.section > div {
  padding: 0.25em 0.5em;
}

.section .section-head {
  background-color: var(--background-alt);
  border-bottom: 1px solid var(--border);
  font-weight: bold;
}

.section .section-body {
  border-bottom: 1px solid var(--border);
}

.section .section-foot {
  background-color: var(--background-alt);
  font-weight: bold;
}

/* Component: TabbedSection */
.tabs {
  background-color: var(--background-alt);
  border: 1px solid var(--border);
  border-bottom: none;
  border-radius: var(--border-radius) var(--border-radius) 0 0;
  display: flex;
  overflow-x: scroll;
}

.tab button {
  border: none;
  background-color: inherit;
  line-height: inherit;
  padding: 0.25em 0.5em;
}

.tab.selected button {
  font-weight: bold;
}

.tab-contents {
  width: 100%;
}

.tab-content {
  border: 1px solid var(--border);
  border-radius: 0 0 var(--border-radius) var(--border-radius);
  padding: 0.25em 0.5em;
}

/* Component: TwoCol (Two-Column Layout */
.two-col {
  border: 1px solid var(--border);
  border-radius: var(--border-radius);
  display: flex;
  grid-template-columns: 1fr 1fr;
}

.two-col > div {
  padding: 0.25em .5em;
  width: 50%;
}

.two-col .two-col-left {
  background-color: var(--background-alt);
  border-right: var(--border);
}

/* Component: Callout */
.callout {
  border: 1px solid var(--border);
  border-radius: var(--border-radius);
  display: grid;
  grid-template-columns: 2.25em auto;
}

.callout > div {
  padding: 0.25em 0.5em;
}

.callout .callout-left {
  background-color: var(--background-alt-dark);
  display: flex;
}

.callout .callout-content {
  background-color: var(--background-alt);
}

/* Component: Code */
.code {
  border-radius: var(--border-radius);
  border: 1px solid var(--border);
  padding: 1em;

}

.code pre {
  margin: 0;
  padding: 0;
  overflow-x: scroll;
}

